<resources>
    <string name="app_name" translatable="false">Shopping-App_Admin</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="image" translatable="false">image\n</string>
    <string name="category">Category</string>
    <string name="inventory">Inventory</string>
    <string name="copuns">Coupons</string>
    <string name="search_product_by_name">Search by name</string>
    <string name="plus" translatable="false">+</string>
    <string name="product_details">Product Details</string>
    <string name="price">Price</string>
    <string name="updated">Updated</string>
    <string name="products">Products</string>
    <string name="no_internet">No Internet</string>
</resources>